Stop ProcessExecutor deadlocking when a child writes more than a pipe buffer (#1805)
* Stop ProcessExecutor deadlocking when a child writes more than a pipe buffer

executeAndReturnInterleavedOutput read stderr to end-of-stream before
touching stdout, so a child that wrote more than the pipe buffer (~64 KB)
to stdout blocked forever, and the caller with it. Merge the two streams in
the child and drain the one pipe, which also gives genuine interleaving
instead of all of stderr followed by all of stdout.

* Mark the ProcessExecutor tests unix-only, since their child commands need a POSIX shell